adding comments to documentation JAVADOC